add limit useother to SQL query
Signed-off-by: Selina Song <selsong@amazon.com>